# flows-feedback-loop

./: The_Current_State_of_AI_in_September_2024.md
self_evaluation_loop_flow/: Dreamwalkers_of_the_Dystopian_Future_20250301_200000.md  The_Current_State_of_AI_in_September_2024.md  book_outline.txt  crewai_flow.html  pyproject.toml  x_post.txt
self_evaluation_loop_flow/src/self_evaluation_loop_flow/: Types.py  main.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_chapter_crew/: book_chapter_crew.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_chapter_crew/config/: agents.yaml  tasks.yaml
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_outline_crew/: book_outline_crew.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_outline_crew/config/: agents.yaml  tasks.yaml
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_outline_review_crew/: __init__.py  book_outline_review_crew.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/book_outline_review_crew/config/: agents.yaml  tasks.yaml
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/shakespeare_crew/: shakespeare_crew.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/crews/x_post_review_crew/: x_post_review_crew.py
self_evaluation_loop_flow/src/self_evaluation_loop_flow/tools/: CharacterCounterTool.py  custom_tool.py  main.py
