[project]
name = "self_evaluation_loop_flow"
version = "0.1.0"
description = "self_evaluation_loop_flow using crewAI"
authors = [
    {name = "David Shannon", email = "david@crewai.com"},
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai==0.79.4",
    "crewai-tools==0.17.0",
    "langchain-openai>=0.1.1",
]

[project.scripts]
kickoff = "self_evaluation_loop_flow.main:kickoff"
plot = "self_evaluation_loop_flow.main:plot"
display = "self_evaluation_loop_flow.main:display_book"
read = "self_evaluation_loop_flow.main:read_book"
list = "self_evaluation_loop_flow.main:list_books"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
